<resources>
    <string name="app_name">Conjurer</string>

    <string name="main_check_permission_tips">请在权限页面打开应用所有权限</string>
    <string name="main_check_permission_title">请确认已打开该应用使用的所有权限</string>
    <string name="main_check_permission_confirm">已确认</string>
    <string name="main_check_permission_unconfirmed">再次确认</string>
    <string name="main_check_permission_cancel">请在设置中打开权限后重启应用</string>
    <string name="main_scan_sfzh_ocr">OCR身份证号拍照识别</string>
    <string name="main_asyn_recog_sfzh">异步识别身份证号图片</string>
    <string name="main_scan_chn_num_ocr">中文大写数字金额识别</string>
    <string name="main_asyn_recog_chn_num">异步识别中文大写数字金额图片</string>
    <string name="main_scan_phone_ocr">手机号识别</string>
    <string name="main_asyn_recog_phone">异步识别手机号图片</string>
    <string name="main_clean_trained_data">清空训练数据</string>
    <string name="main_scan_default">默认扫描配置（英文）</string>
    <string name="main_clean_trained_data_ok">已清空</string>
    <string name="main_clean_log">清空日志</string>
    <string name="main_data_path">训练文件默认路径：%s</string>
    <string name="main_dialog_pic_case">点击样例图片进行识别：</string>
    <string name="main_dialog_pic_case_1">样例1</string>
    <string name="main_dialog_pic_case_2">样例2</string>
    <string name="main_dialog_pic_album">选择手机相册图片</string>
</resources>